#59 - fix hover layout bug

--- a/app/styles/components/_navigation-sidebar.scss
+++ b/app/styles/components/_navigation-sidebar.scss
@@ -27,11 +27,11 @@
   &__navItemAction {
     display: none;
     margin-left: 0.5em;
+    margin-top: -0.2em;
   }
   &__navItemAction i {
-    font-size: 1.4em;
+    font-size: 1.2em;
     vertical-align: middle;
-    margin-bottom: 0.2em;
   }
   &__footer {
     margin-top: 20rem;
